fix/demo-block-spacing

--- a/src/assets/styles/_base.scss
+++ b/src/assets/styles/_base.scss
@@ -26,7 +26,7 @@ body {
     flex-direction: column;
 
     &-title{
-        margin-bottom: 16px;
+        margin-bottom: 24px;
         font-family: $font-bold;
         text-transform: uppercase;
     }
